src/resolver/snapshots/rv__resolver__tests__binary_available_but_needs_from_source.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
test.force_source=1.0.0 (repository(url: http://repo1/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
