src/resolver/snapshots/rv__resolver__tests__cycle_dep_lockfile.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
R6=2.5.1 (repository(url: http://cran/), type=binary, path='', from_lockfile=true, from_remote=false, env_vars=[])
processx=3.8.6 (repository(url: http://cran/), type=binary, path='', from_lockfile=true, from_remote=false, env_vars=[])
