src/resolver/snapshots/rv__resolver__tests__cycle_dep_lockfile_ver_req.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
R6=3.5.2 (repository(url: http://cran/), type=binary, path='', from_lockfile=true, from_remote=false, env_vars=[])
processx=3.5.2 (repository(url: http://cran/), type=binary, path='', from_lockfile=true, from_remote=false, env_vars=[])
