src/resolver/snapshots/rv__resolver__tests__dep_force_source_lockfile.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
R6=2.5.1 (repository(url: http://cran/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
