src/resolver/snapshots/rv__resolver__tests__dependencies_only.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
dplyr=1.1.4 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[], ignored)
cli=3.6.3 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
generics=0.1.3 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
glue=1.8.0 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
lifecycle=1.0.4 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
magrittr=2.0.3 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pillar=1.10.0 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
R6=2.5.1 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rlang=1.1.4 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tibble=3.2.1 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tidyselect=1.2.1 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
vctrs=0.6.5 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
utf8=1.2.4 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fansi=1.0.6 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pkgconfig=2.0.3 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
withr=3.0.2 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
