src/resolver/snapshots/rv__resolver__tests__different_repo_from_lockfile.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
R6=2.5.1 (repository(url: http://test/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
